datahubterminalplugin: add subscription for timeline and reels events of datamarts in terminal.